examples/Error/7.escape


game {
    objetoA,
    objetoB,
    objetivoC
}

item objetoA {
    onuse {
        show "Soy un objeto D"
    }
    onuse {
        show "Soy un objeto A"
    }
}

item objetoB {
    onuse {
        show "Soy un objeto B"
    }
}

target objetivoC {
    onuse {
        if locked -> show "Soy un objetivo C, y estoy bloqueado",
        if unlocked -> show "Soy un objetivo C, y estoy desbloqueado"
    }
}
